<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonPower"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="irSend"
        android:text="@string/Power" />

    <Button
        android:id="@+id/buttonMute"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPower"
        android:layout_below="@+id/buttonPower"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/Mute" />

    <Button
        android:id="@+id/buttonVolDown"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonMute"
        android:layout_below="@+id/buttonMute"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/VolM" />

    <Button
        android:id="@+id/buttonVolUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonMute"
        android:layout_below="@+id/buttonMute"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/VolP" />

    <Button
        android:id="@+id/buttonChnP"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonVolUp"
        android:layout_below="@+id/buttonVolUp"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/ChanP" />

    <Button
        android:id="@+id/buttonInput"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonChnP"
        android:layout_below="@+id/buttonChnP"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/Input" />

    <Button
        android:id="@+id/buttonChnM"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonVolDown"
        android:layout_below="@+id/buttonVolDown"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/ChanM" />

    <Button
        android:id="@+id/buttonCD"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonChnM"
        android:layout_below="@+id/buttonChnM"
        android:layout_marginTop="15dp"
        android:onClick="irSend"
        android:text="@string/CD" />

    <Button
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCD"
        android:layout_alignRight="@+id/buttonInput"
        android:layout_below="@+id/buttonCD"
        android:layout_marginTop="15dp"
        android:onClick="changeControl"
        android:text="@string/chControl" />

</RelativeLayout>